# pic-nix

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md  application.hpp  balancer.cpp  balancer.hpp  chunk.cpp  chunk.hpp  chunk3d.hpp  chunkmap.hpp  chunkvector.hpp  common.cmake  common.mk  compiler-gcc.mk  debug.hpp  halo3d.hpp  logger.hpp  mpistream.hpp  nix.hpp  nixio.cpp  primitives.hpp  sfc.cpp  xtensor_halo3d.hpp  xtensor_particle.hpp  xtensorall.hpp
cmake/: fugaku-gcc-cross.cmake  fugaku-gcc.cmake  fugaku-llvm-cross.cmake  fugaku-llvm14-cross.cmake  fugaku-llvm17-cross.cmake  fugaku-llvm19-cross.cmake  linux-gcc.cmake  linux-intel.cmake
core/: Makefile  common.mk  config_sample.json  exchunk3d.cpp  exchunk3d.d  exchunk3d.hpp  exchunk3d_1st.cpp  expic3d.cpp  expic3d.hpp  json2hdf5.py  main.cpp
elliptic/: CMakeLists.txt  chunk_accessor.hpp  elliptic.hpp  petsc_interface.cpp  petsc_interface.hpp  petsc_poisson.cpp  petsc_poisson.hpp  petsc_scatter.cpp  petsc_scatter.hpp  petsc_solver.cpp  petsc_solver.hpp  petsc_utils.hpp
elliptic/unittest/: CMakeLists.txt  mock_chunk.hpp  test_chunk_accessor.cpp  test_parallel.cpp  test_parallel_common.hpp  test_petsc_interface.cpp  test_petsc_poisson.cpp  test_petsc_scatter.cpp  test_petsc_solver.cpp  test_petsc_utils.cpp
example/: CMakeLists.txt
example/beam/: CMakeLists.txt  main.cpp
example/beam/twostream/: batch.py  config.json  config.toml
example/beam/weibel/: batch.py  config.json  config.toml
example/cherenkov/: CMakeLists.txt  config.json  config.toml  main.cpp
example/fireball/: CMakeLists.txt  batch.py  config.json  config.toml  main.cpp
example/mrx/: CMakeLists.txt  batch.py  config.json  config.toml  main.cpp
example/shock/: CMakeLists.txt  batch.py  config.json  config.toml  main.cpp
example/thermal/: CMakeLists.txt  config.json  config.toml  main.cpp
expic/: CMakeLists.txt  Makefile  common.mk  config_sample.json  diagnoser.hpp  engine.hpp  exchunk3d.cpp  exchunk3d.hpp  exchunk3d_1st.cpp  exchunk3d_2nd.cpp  exchunk3d_impl.hpp  exchunk3d_impl_scalar.cpp  exchunk3d_impl_xsimd.cpp  expic3d.cpp  expic3d.hpp  main.cpp
expic/diag/: async.hpp  base.hpp  field.hpp  history.hpp  load.hpp  parallel.hpp  particle.hpp  resource.hpp  tracer.hpp
expic/engine/: current.hpp  maxwell.hpp  moment.hpp  position.hpp  velocity.hpp
nix/: CMakeLists.txt  FindFilesystem.cmake  application.cpp  application.hpp  argparser.hpp  balancer.hpp  buffer.hpp  cfgparser.hpp  chunk.hpp  chunk3d.cpp  chunk3d.hpp  chunkmap.cpp  chunkmap.hpp  chunkvector.hpp  diag.hpp  esirkepov.hpp  interp.hpp  nix.hpp  nixio.hpp  particle.hpp  random.hpp  sfc.hpp  statehandler.hpp  xtensor_halo3d.hpp  xtensor_packer3d.hpp  xtensor_particle.hpp
nix/unittest/: CMakeLists.txt  test_application.cpp  test_argparser.cpp  test_balancer_parallel.cpp  test_buffer.cpp  test_cfgparser.cpp  test_chunkmap.cpp  test_chunkvector.cpp  test_esirkepov.cpp  test_mpistream_parallel.cpp  test_nixio.cpp  test_parallel.cpp  test_primitives.cpp  test_random.cpp  test_sendrecv.cpp  test_serial.cpp  test_xtensor_halo3d.cpp  test_xtensor_packer3d.cpp  test_xtensor_particle.cpp
pic/: CMakeLists.txt  pic.hpp  pic_application.cpp  pic_application.hpp  pic_chunk.cpp  pic_chunk.hpp  pic_diag.hpp  pic_engine.hpp  pic_packer.hpp
pic/diag/: base.hpp  diag_handler.hpp  field.hpp  history.hpp  load.hpp  parallel.hpp  particle.hpp  resource.hpp  tracer.hpp
pic/engine/: current.hpp  maxwell.hpp  moment.hpp  position.hpp  velocity.hpp
project3d/: CMakeLists.txt
project3d/beam/: CMakeLists.txt  Makefile  batch.py  config_sample.json  main.cpp
project3d/beam/twostream/: batch.py  config.json
project3d/beam/weibel/: batch.py  config.json
project3d/fireball/: CMakeLists.txt  config.json  main.cpp
project3d/mrx/: CMakeLists.txt  config.json  main.cpp
project3d/script/: analysis.py  json2hdf5.py
project3d/thermal/: CMakeLists.txt  Makefile  analysis.py  config.json  config_sample.json  main.cpp
script/: analysis.py  json2hdf5.py  loadchecker.py  memory-estimater.py  memory-estimator.py  msgpack-printer.py  syncdir.py
script/picnix/: __init__.py  diag.py  field.py  particle.py  run.py  utils.py
unittest/: test_application.cpp  test_balancer.cpp  test_balancer_parallel.cpp  test_chunk.cpp  test_chunkvector.cpp  test_interp.cpp  test_logger.cpp  test_mpistream.cpp  test_nixio_parallel.cpp  test_sfc.cpp  test_statehandler_parallel.cpp  test_xtensor_particle.cpp
